; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/kxld/extr_kxld_sym.c_kxld_sym_is_unresolved.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/kxld/extr_kxld_sym.c_kxld_sym_is_unresolved.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kxld_sym_is_unresolved(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i64 @kxld_sym_is_undefined(i32* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @kxld_sym_is_replaced(i32* %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %18

10:                                               ; preds = %6, %1
  %11 = load i32*, i32** %2, align 8
  %12 = call i64 @kxld_sym_is_indirect(i32* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %18, label %14

14:                                               ; preds = %10
  %15 = load i32*, i32** %2, align 8
  %16 = call i64 @kxld_sym_is_common(i32* %15)
  %17 = icmp ne i64 %16, 0
  br label %18

18:                                               ; preds = %14, %10, %6
  %19 = phi i1 [ true, %10 ], [ true, %6 ], [ %17, %14 ]
  %20 = zext i1 %19 to i32
  ret i32 %20
}

declare dso_local i64 @kxld_sym_is_undefined(i32*) #1

declare dso_local i32 @kxld_sym_is_replaced(i32*) #1

declare dso_local i64 @kxld_sym_is_indirect(i32*) #1

declare dso_local i64 @kxld_sym_is_common(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
